docs: 회원 프로필 조회 API 문서 작성